--- a/server/.env
+++ b/server/.env
@@ -2,3 +2,5 @@ MONGO_URL = mongodb+srv://hostelmanagementowners:aMdVx1kEXXYfq5lN@cluster0.yr1ps
 PORT = 4004
 CLIENT_URL = http://localhost:5173
 JWT_SECRET = qpwoeirutyalskdjfhgzmxncbv
+MAIL_SENDER = senderfromern@gmail.com
+MAIL_PASS = vgghkoksogbhhtve
